add `modifyUserPermissions` endpoint
